--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@ $FontAwesomePath: '../components/font-awesome/font';
 $mobile:                  4;
 $tablet:                  6;
 $desktop:                 8;
-$desktop-large:           12;
+$desktop-large:           10;
 
 $total-columns:           $mobile;
 $column-width:            80px;
@@ -63,6 +63,12 @@ $link-hover-color:        $kntntOrange;
 $link-active-color:       $kntntOrangeDark;
 $link-visited-color:      $link-color;
 
+@mixin box {
+  background: $white;
+  box-shadow: 0 0 5px $lightgrey;
+  padding: 10px;
+}
+
 a {
   color: $link-color;
   &:hover { color: $link-hover-color; }
@@ -79,6 +85,7 @@ body {
   font-family: $base-font;
   font-size: $font-size;
   line-height: 1.5em;
+  background-color: #f5f5f5;
 }
 img {
   max-width: 100%;
@@ -91,6 +98,9 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
+  a, a:visited {
+    color: $black;
+  }
 }
 
 h1,
@@ -175,11 +185,10 @@ strong {
 }
 
 
-// Images and image credit and description
-.content-top .field.field-type-file,
-.content .views-field.views-field-field-konzilo-file {
+// Content inline text layout
+.content-inline-text {
    position: relative;
-   .main-content {
+   .main {
      margin-bottom: 30px;
      .file-display {
        img {
@@ -187,7 +196,7 @@ strong {
          height: auto;
          display: block;
        }
-     } 
+     }
    }
   .inline-text {
     position: absolute;
@@ -201,7 +210,7 @@ strong {
       padding: 10px;
       background: $black;
       border-radius: 3px 0 0 3px;
-      float: left;
+      flota1: left;
       &:first-child {
         margin-right: 5px;
       }
@@ -241,6 +250,10 @@ strong {
       margin-bottom: 0;
     }
   }
+}
+
+article.content {
+  @include box;
 }
 
 @include at-breakpoint($tablet) {
@@ -285,7 +298,7 @@ strong {
         margin-bottom: 0;
       }
     }
-  }  
+  }
 }
 
 .author-date {
@@ -339,7 +352,7 @@ header {
   background: $white;
   z-index: 1;
   position: relative;
-  box-shadow: 0 0 3px $grey;
+  box-shadow: 0 0 3px $lightgrey;
   & > .container {
     padding: 1em 0;
     .branding-left {
@@ -428,9 +441,8 @@ header {
   }
 }
 
-
 .main-content {
-  background-color: $white;
+  padding-top: 5px;
   margin-bottom: 50px;
 }
 
@@ -505,7 +517,7 @@ footer {
               @include span-columns(4, 12);
             }
             &.socialmedia {
-              @include span-columns(8 omega, 12);            
+              @include span-columns(8 omega, 12);
             }
           }
         }
@@ -617,7 +629,7 @@ footer {
                 font-size: 0.9em;
                 font-weight: 600;
                 color: $darkergrey;
-                line-height: 1em;                
+                line-height: 1em;
                 padding: 1.75em 0.5em;
                 border: none;
                 display: block;
@@ -645,21 +657,30 @@ footer {
 
 
 ul.tabs {
+  border: none;
+  margin-bottom: 10px;
+  &.primary {
+    padding: 0;
+  }
   li {
     padding: 0;
-    &.active {
-      a {
-        border-bottom: 1px solid #07607a;
-      }
+    &.active a {
+      @include sassy-button("simple", 2px, 12px, $kntntGreen, $kntntGreener);
     }
     a {
-      @include sassy-button("glass", 5px, 14px, $kntntGreen, $kntntGreener);
-      border-radius: 5px 5px 0 0;
-      padding: 0.2em 0.5em;
+      @include sassy-button("simple", 2px, 12px, $kntntGreen, $kntntGreener);
     }
   }
 }
 
+// Article stuff
+.field-name-field-konzilo-lead {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 1.1em;
+  letter-spacing: 2px;
+}
 
 .twocolumns {
   // sidebar spans 3 columns of total 12.
@@ -680,9 +701,11 @@ ul.tabs {
   h2.title {
     margin-bottom: 5px;
   }
-  .views-field.views-field-field-konzilo-file {
-    .main-content {
-      margin-bottom: 10px;
-    }
+}
+
+.item {
+  @include box;
+  .content-inline-text {
+    margin-bottom: 10px;
   }
 }
