--- a/sass/main.scss
+++ b/sass/main.scss
@@ -661,6 +661,7 @@ ul.tabs {
   margin-bottom: 10px;
   &.primary {
     padding: 0;
+    margin-left: 1px;
   }
   li {
     padding: 0;
@@ -708,4 +709,43 @@ ul.tabs {
   .content-inline-text {
     margin-bottom: 10px;
   }
+}
+
+.view-empty {
+  @include box;
+}
+
+.unmanaged {
+  @include box;
+}
+
+// Forms
+.form-required {
+  color: $black;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="password"] {
+  display: block;
+  height: 20px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
+  vertical-align: middle;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  margin: 0;
+}
+
+input[type="submit"] {
+  @include sassy-button("simple", 2px, 12px, $kntntGreen, $kntntGreener);
 }
